# base-askapparallel

./: CMakeLists.txt  Jenkinsfile  README.md
askap/askapparallel/: AskapParallel.cc
